	* src/StyleEditor.py (save_paragraph): Call gfloat instead of float.
	* src/TextDoc.py (SheetParser.startElement): Likewise.
	* src/Utils.py: Provide a locale-aware string formatting conversion
	into C-locale string (for saving floats in XML)
	* src/StyleEditor.py (draw): Call locale.str instead of str.
	* src/TextDoc.py (StyleSheetList.save): Call gformat instead of '%f'.

2003-06-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/preferences.glade: Don't immediately show preferences dialog
	* src/GrampsCfg.py: Handle new callback for preferences dialog
	* src/gramps_main.py: Pass update_display instead of full_update to
	loadConfig to prevent the displaying of multiple entries on the display.
	* src/Utils.py: provide a locale independant floating point conversion
	utility
	* src/TextDoc.py: call new gfloat utility instead of float
	* src/PaperMenu.py: call new gfloat utility instead of float
	
2003-06-14  Tim Waugh  <twaugh@redhat.com>
	* Ancestors.py (AncestorsReport.__init__): Define Photo and
	Entry cell styles.

2003-06-13  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/EditPerson.py (did_data_change): When checking name type, 
	compare translated strings (otherwise they always differ in 
	non-English $LANG).

2003-06-13  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: Removed the conflict of using pmap for two seperate
	purposes - mapping places to iterators and places to keys. The place to
	key map is now pdmap
	* src/EditPlace.py: Handle drag and drop with places
	* src/EditPerson.py: Handle exchange of perferred name and selected
	name in the alternate name list
	* src/docgen/OpenDrawDoc.py: add support for superscripts
	* src/docgen/OpenOfficeDoc.py: add support for superscripts
	* src/docgen/KwordDoc.py: add support for superscripts
	* src/docgen/RTFDoc.py: add support for superscripts

2003-06-13  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/const.py.in: Add InverseNameTypesMap.